# coilpattern

./: CMakeLists.txt  README.md
examples/: fieldCalc2d.cxx  fieldReport2d.cxx  load_vtk.cxx  oneDimensionalproblem.cxx  test.cxx
include/: XElement.h  XElement3Node.h  XFieldStraightLine.h  XLogger.h  XMatrix3Node.h  XMeshHandle.h  XMeshHandle2.h  XNode.h  XSolveProblemTSVD.h  XSolveTSVD.h  XTargetSphere.h  XVtkFile.h
input/gmsh/: curvedGeo.geo  cylinder.geo  mri_cylinder.geo  rectGeo.geo  shortModel.geo  straightGeo.geo
input/vtk/: curvedGeo.vtk  curvedGeo2order.vtk  curvedGeo_fine.vtk  mri_cylinder.vtk  mri_cylinder_O2.vtk  mri_cylinder_fine.vtk  rectGeo.vtk  shortModel.vtk  straightGeo.vtk
script/: check_oneDimensional_res.py  check_sparse_matrix.py  create_opera_table.py  generate_1DcoilPattern.py
script/optimization/: optimization_module.py  runOptimization.py
src/: CMakeLists.txt  XElement.cxx  XElement3Node.cxx  XFieldStraightLine.cxx  XLogger.cxx  XMatrix3Node.cxx  XMeshHandle.cxx  XMeshHandle2.cxx  XSolveProblemTSVD.cxx  XSolveTSVD.cxx  XTargetSphere.cxx  XVtkFile.cxx
